tests/specs/check/tsconfig_no_config/main.ts
document.body.innerHTML = "<div>Hello</div>";
